--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,10 +2,14 @@
   "Dashboard": "Dashboard",
   "ViewDetails": "View Details",
   "Transactions": "Transactions",
+  "Transaction": "Transaction",
   "Accounts": "Accounts",
+  "Account": "Account",
   "Messages": "Messages",
+  "Message": "Message",
   "Producers": "Producers",
   "Blocks": "Blocks",
+  "Block": "Block",
   "ViewAll": "View All",
   "Time": "Time",
   "Tx": "Tx",
@@ -14,5 +18,31 @@
   "ToggleNavigation": "Toggle navigation",
   "EOSTracker": "EOS Tracker",
   "Wallet": "Wallet",
-  "SearchBy": "Search by Block / Transaction / Account"
+  "SearchBy": "Search by Block / Transaction / Account",
+  "Name": "Name",
+  "Balance": "Balance",
+  "Staked": "Staked",
+  "Unstaked": "Unstaked",
+  "CreatedAt": "Created At",
+  "UpdatedAt": "Updated At",
+  "BlockchainRawData": "Blockchain Raw Data",
+  "Table": "Table",
+  "Previous": "Previous",
+  "Next": "Next",
+  "BlockId": "Block Id",
+  "EOS": "EOS",
+  "BlockInformation": "Block Information",
+  "Number": "Number",
+  "Timestamp": "Timestamp",
+  "MerkleRoot": "Merkle root",
+  "TransactionId": "Transaction Id",
+  "MessageIndex": "Message Index",
+  "HandlerAccount": "Handler Account",
+  "Handler": "Handler",
+  "Type": "Type",
+  "Authorization": "Authorization",
+  "Stats": "Stats",
+  "Search": "Search",
+  "Id": "Id",
+  "Scope": "Scope"
 }
