--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -7,7 +7,7 @@
   "Account": "账户",
   "Messages": "消息",
   "Message": "消息",
-  "Producers": "生产者",
+  "Producers": "生产员",
   "Blocks": "区块",
   "Block": "区块",
   "ViewAll": "查看所有",
@@ -15,14 +15,14 @@
   "Tx": "交易",
   "Producer": "生产者",
   "Msgs": "记录",
-  "ToggleNavigation": "切换导航",
-  "EOSTracker": "EOS跟踪器",
+  "ToggleNavigation": "切换浏览方式",
+  "EOSTracker": "EOS追踪仪",
   "Wallet": "钱包",
-  "SearchBy": "使用区块/交易/账户搜索",
+  "SearchBy": "根据 区块 / 交易 / 账户 搜索",
   "Name": "用户名",
   "Balance": "余额",
-  "Staked": "权益锁定",
-  "Unstaked": "未权益锁定",
+  "Staked": "以受押的",
+  "Unstaked": "未受押的",
   "CreatedAt": "创建时间",
   "UpdatedAt": "更新时间",
   "BlockchainRawData": "区块链原始数据",
@@ -41,7 +41,7 @@
   "Handler": "处理",
   "Type": "类型",
   "Authorization": "授权",
-  "Stats": "状态",
+  "Stats": "统计数据",
   "Search": "搜索",
   "Id": "Id",
   "Scope": "范围"
