--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -34,7 +34,7 @@
   "BlockInformation": "Informacija o bloku",
   "Number": "Številka",
   "Timestamp": "Časovna značka",
-  "MerkleRoot": "Merklovo drevo
+  "MerkleRoot": "Merklovo drevo",
   "TransactionId": "Id transakcije",
   "MessageIndex": "Index sporočila",
   "HandlerAccount": "Račun ročica",
