--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -44,5 +44,7 @@
   "Stats": "Statistiken",
   "Search": "Suche",
   "Id": "ID",
-  "Scope": "Geltungsbereich"
+  "Scope": "Geltungsbereich",
+  "Settings": "Einstellungen",
+  "Language": "Sprache"
 }
