--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -44,5 +44,7 @@
   "Stats": "통계",
   "Search": "검색",
   "Id": "ID",
-  "Scope": "범위"
+  "Scope": "범위",
+  "Settings": "Settings",
+  "Language": "Language"
 }
