--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -44,5 +44,7 @@
   "Stats": "Statistika",
   "Search": "Iskanje",
   "Id": "Id",
-  "Scope": "Obseg"
+  "Scope": "Obseg",
+  "Settings": "Nastavitve",
+  "Language": "Jezik"
 }
