--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -29,14 +29,14 @@
   "Table": "Tabela",
   "Previous": "Predhodni",
   "Next": "Naslednji",
-  "BlockId": "Block Id",
+  "BlockId": "Blok id",
   "EOS": "EOS",
-  "BlockInformation": "Informacija o bloku",
+  "BlockInformation": "blok",
   "Number": "Številka",
   "Timestamp": "Časovna značka",
-  "MerkleRoot": "Merklovo drevo",
+  "MerkleRoot": "Merklov koren",
   "TransactionId": "Id transakcije",
-  "MessageIndex": "Index sporočila",
+  "MessageIndex": "Indeks sporočila",
   "HandlerAccount": "Račun ročica",
   "Handler": "Ročica",
   "Type": "Tip",
