--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -45,6 +45,6 @@
   "Search": "搜索",
   "Id": "Id",
   "Scope": "范围",
-  "Settings": "Settings",
-  "Language": "Language"
+  "Settings": "设置",
+  "Language": "语言"
 }
