wip dawn3 migration

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,6 +5,8 @@
   "Transaction": "Transaktion",
   "Accounts": "Konten",
   "Account": "Konto",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Nachrichten",
   "Message": "Nachricht",
   "Producers": "Produzenten",
