--- a/src/assets/i18n/dk.json
+++ b/src/assets/i18n/dk.json
@@ -5,6 +5,8 @@
 	"Transaction": "Transaktion",
 	"Accounts": "Konti",
 	"Account": "Konto",
+	"Actions": "Actions",
+	"Action": "Action",
 	"Messages": "Beskeder",
 	"Message": "Besked",
 	"Producers": "Producenter",
