--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,8 @@
   "Transaction": "Transaction",
   "Accounts": "Accounts",
   "Account": "Account",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Messages",
   "Message": "Message",
   "Producers": "Producers",
