--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,6 +5,8 @@
   "Transaction": "Transacción",
   "Accounts": "Cuentas",
   "Account": "Cuenta",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Mensajes",
   "Message": "Mensaje",
   "Producers": "Productores",
