--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,6 +5,8 @@
   "Transaction": "Transaction",
   "Accounts": "comptes",
   "Account": "compte",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Messages",
   "Message": "Message",
   "Producers": "Producteurs",
