--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -5,6 +5,8 @@
 	"Transaction": "Transazione",
 	"Accounts": "Conti",
 	"Account": "Conto",
+	"Actions": "Actions",
+	"Action": "Action",
 	"Messages": "Messaggi",
 	"Message": "Messaggio",
 	"Producers": "Produttori",
