--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -5,6 +5,8 @@
   "Transaction": "Transação",
   "Accounts": "Contas",
   "Account": "Conta",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Messagem",
   "Message": "Messagens",
   "Producers": "Produtores",
