--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -5,6 +5,8 @@
   "Transaction": "Transakcija",
   "Accounts": "Računi",
   "Account": "Račun",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Sporočila",
   "Message": "Sporočilo",
   "Producers": "Proizvajalci",
