--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -5,6 +5,8 @@
   "Transaction": "交易",
   "Accounts": "账户",
   "Account": "账户",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "消息",
   "Message": "消息",
   "Producers": "生产员",
