--- a/src/assets/i18n/hr.json
+++ b/src/assets/i18n/hr.json
@@ -5,6 +5,8 @@
   "Transaction": "Transakcija",
   "Accounts": "Računi",
   "Account": "Račun",
+  "Actions": "Actions",
+  "Action": "Action",
   "Messages": "Poruke",
   "Message": "Poruka",
   "Producers": "Proizvođači",
