--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -5,8 +5,8 @@
   "Transaction": "거래(트랜잭션)",
   "Accounts": "계정",
   "Account": "계정",
-  "Actions": "Actions",
-  "Action": "Action",
+  "Actions": "액션",
+  "Action": "액션",
   "Messages": "메시지",
   "Message": "메시지",
   "Producers": "블록 프로듀서",
@@ -38,7 +38,7 @@
   "Timestamp": "생성시각",
   "MerkleRoot": "머클 루트",
   "TransactionId": "거래 ID",
-  "ActionIndex": "Action Index",
+  "ActionIndex": "액션 인덱스",
   "HandlerAccount": "핸들러 계정",
   "Handler": "핸들러",
   "Type": "유형",
@@ -48,5 +48,17 @@
   "Id": "ID",
   "Scope": "범위",
   "Settings": "설정",
-  "Language": "언어"
+  "Language": "언어",
+  "Votes": "투표",
+  "Url": "URL",
+  "Daily Reward": "보상(단위:일)",
+  "Confirmations": "승인",
+  "Actions Received": "받은 액션",
+  "Actions Sent": "보낸 액션",
+  "Contract": "컨트랙트",
+  "Tables": "테이블",
+  "Pending": "대기",
+  "Expiration": "만료 시간",
+  "Detail": "상세 정보",
+  "Transaction Information": "거래 정보"
 }
